src/objects/ACET_Claims_Docs_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>ACET_Attribute__c</fullName>
        <label>ACET Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doc360_Attribute__c</fullName>
        <label>Doc360 Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doc_class_Name__c</fullName>
        <label>Doc class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ACET Claims Docs Mapping</label>
    <pluralLabel>ACET Claims Docs Mapping</pluralLabel>
</CustomObject>